[tool.poetry]
name = "pyonlinesim"
version = "1.0.0"
description = "Asynchronous wrapper to interact with onlinesim.ru API"
authors = ["Marple"]
readme = "README.md"
repository = "https://github.com/marple-git/pyonlinesim"

[tool.poetry.dependencies]
python = "^3.6.1"
aiohttp = ">=3.7.3"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
